# ai-crypto-bot

./: README.md  pyproject.toml
src/: ai_crypto_bot.ipynb  main.py
